<resources>
    <string name="app_name">Ghost</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_login">Login</string>
    <string name="error_invalid_login_credentials">Username or password is invalid</string>
    <string name="error_field_required">This field is required</string>

    <!-- Friends Screen -->
    <string name="add_friend_hint">Friend Name</string>
    <string name="add_friend_add">Add</string>
    <string name="add_friend_cancel">Cancel</string>

    <!-- Chat Screen -->
    <string name="message_hint">Type message here...</string>
    <string name="send_message">Send</string>
</resources>
